--- a/src/styles/base.scss
+++ b/src/styles/base.scss
@@ -1,22 +1,30 @@
+html, body {
+  height: 100%;
+  margin: 0;
+  scroll-behavior: smooth;
+}
+
 body {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   font-size: 16px;
 }
 
+.container-full {
+  height: 100vh;
+}
+
 .container {
-  width: 1640px;
-  min-width: 1640px;
   margin: 0 auto;
-  @media (max-width: 1440px) {
-    width: 1280px;
-    min-width: 1280px;
-  }
-  @media (max-width: 1280px) {
-    width: 976px;
-    min-width: 976px;
-  }
-  @media (max-width: 976px) {
-    width: 768px;
-    min-width: 768px;
-  }
+  max-width: 968px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.section {
+  min-height: 500px;
+}
+
+.wrapper {
+  margin: 30px;
 }
