--- a/src/styles/header.scss
+++ b/src/styles/header.scss
@@ -4,8 +4,10 @@ header {
   height: 80px;
   width: 100%;
   top: 0px;
+  position: absolute;
   z-index: 10;
-  box-shadow: 0px 3px 5px grey;
+  box-shadow: 0px 0px 10px grey;
+  background-color: whitesmoke;
   .inner-header {
     display: flex;
     align-items: center;
@@ -18,18 +20,19 @@ header {
         text-decoration: none;
         letter-spacing: 2px;
         color: black;
+        padding-left: 15px;
       }
     }
     .navigation {
       nav {
         a {
-          margin: 0 20px;
+          margin: 0 15px;
           text-decoration: none;
           letter-spacing: 1.7px;
           color: black;
-          &:last-child {
-              margin-right: 0px;
-          }
+        //   &:last-child {
+        //       margin-right: 15px;
+        //   }
         }
       }
     }
