--- a/src/styles/base.scss
+++ b/src/styles/base.scss
@@ -1,24 +1,27 @@
 html, body {
   height: 100%;
-  margin: 0;
-  scroll-behavior: smooth;
+  margin: 0px;
 }
 
 body {
+  -webkit-font-smoothing: antialiased;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   font-size: 16px;
 }
 
-.container-full {
-  height: 100vh;
-}
+
 
 .container {
   margin: 0 auto;
+  height: 100px;
   max-width: 968px;
   display: flex;
   flex-direction: column;
   align-items: center;
+}
+
+.container-full {
+  height: 100vh;
 }
 
 .section {
@@ -28,3 +31,14 @@ body {
 .wrapper {
   margin: 30px;
 }
+
+p {
+  letter-spacing: 1px;
+}
+
+// .vertical-center {
+//   position: absolute;
+//   top: 50%;
+//   -ms-transform: translateY(-50%);
+//   transform: translateY(-50%);
+// }
