--- a/src/styles/hero.scss
+++ b/src/styles/hero.scss
@@ -1,6 +1,14 @@
-
 .landing {
-    padding-top: 80px;
+    height: 100vh;
     display: flex;
     flex-direction: column;
+    justify-content: center;
+    // padding-top: 80px;
+    h3 {
+    font-family: 'Courier New', Courier, monospace;
+      margin: 0px;
+    }
+    h1 {
+      margin: 10px 0px;
+    }
 }
