--- a/src/styles/base.scss
+++ b/src/styles/base.scss
@@ -28,9 +28,10 @@ body {
 
 .section {
   min-height: 500px;
+  height: auto;
 }
 
-.wrapper {
+.section-container {
   margin: 30px;
 }
 
@@ -44,3 +45,16 @@ p {
 //   -ms-transform: translateY(-50%);
 //   transform: translateY(-50%);
 // }
+
+.ham {
+  padding-right: 15px;
+  height: 80px;
+  position: relative;
+  z-index: 11;
+  display: flex;
+  flex-direction: row-reverse;
+  align-items: center;
+  @media only screen and (min-width: 501px) {
+    display: none;
+  }
+}
