--- a/src/styles/menu.scss
+++ b/src/styles/menu.scss
@@ -1,15 +1,34 @@
 .navigation {
-    nav {
-        display: flex;
-        flex-direction: row;
-      a {
-        margin: 0 15px;
-        text-decoration: none;
-        letter-spacing: 1.7px;
-        color: black;
+  @media only screen and (max-width: 500px) {
+    display: none;
+  }
+  nav {
+    display: flex;
+    flex-direction: row;
+    a {
+      margin: 0 15px;
+      text-decoration: none;
+      letter-spacing: 1.7px;
+      color: black;
       //   &:last-child {
       //       margin-right: 15px;
       //   }
-      }
     }
   }
+}
+
+.navigation-vertical {
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  nav {
+    height: 200px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-between;
+    padding: 5px 0px;
+  }
+}
