--- a/src/styles/base.scss
+++ b/src/styles/base.scss
@@ -9,6 +9,7 @@ body {
   -webkit-font-smoothing: antialiased;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   font-size: 16px;
+  min-width: 300px;
 }
 
 
@@ -33,6 +34,9 @@ body {
 
 .section-container {
   margin: 30px;
+  p {
+    min-width: 250px;
+  }
 }
 
 p {
@@ -51,6 +55,7 @@ p {
   margin-right: 15px;
   height: 80px;
   width: 100%;
+  min-width: 300px; //can be set as variable
   top: 0px;
   position: absolute;
   z-index: 11;
