--- a/src/styles/hero.scss
+++ b/src/styles/hero.scss
@@ -1,18 +1,23 @@
 .landing {
   height: 100vh;
+  min-height: 500px;
   display: flex;
   flex-direction: column;
   justify-content: center;
+  position: relative;
   // padding-top: 80px;
-  .greetings {
-    font-family: "Courier New", Courier, monospace;
-    font-weight: bold;
-    margin: 0px;
-  }
-  h1 {
-    margin: 10px 0px;
-  }
-  p {
-    line-height: normal;
+  .landing-content-container {
+    // min-height: 400px;
+    .greetings {
+      font-family: "Courier New", Courier, monospace;
+      font-weight: bold;
+      margin: 0px;
+    }
+    h1 {
+      margin: 10px 0px;
+    }
+    p {
+      line-height: normal;
+    }
   }
 }
