--- a/src/styles/header.scss
+++ b/src/styles/header.scss
@@ -2,10 +2,10 @@
 
 header {
   height: 80px;
-  @media (max-width: 500px){
+  @media (max-height: 400px), (max-width: 500px) {
     height: 50px;
   }
-  @media (max-width: 1024px) and (orientation: landscape) {
+  @media only screen and (max-height: 400px) and (max-width: 1024px) and (orientation: landscape) {
     height: 50px;
   }
   width: 100%;
@@ -20,10 +20,10 @@ header {
     align-items: center;
     justify-content: space-between;
     height: 80px;
-    @media (max-width: 500px) {
+    @media (max-height: 400px), (max-width: 500px) {
       height: 50px;
     }
-    @media (max-width: 1024px) and (orientation: landscape) {
+    @media only screen and (max-height: 400px) and (max-width: 1024px) and (orientation: landscape) {
       height: 50px;
     }
     .logo {
