--- a/src/styles/header.scss
+++ b/src/styles/header.scss
@@ -1,6 +1,8 @@
 //Header
 
 header {
+  padding-left: env(safe-area-inset-left);
+  padding-right: env(safe-area-inset-right);
   height: 80px;
   @media (max-height: 414px), (max-width: 500px) {
     height: 50px;
@@ -8,8 +10,8 @@ header {
   @media only screen and (max-height: 400px) and (max-width: 1024px) and (orientation: landscape) {
     height: 50px;
   }
-  width: 100%;
-  min-width: 300px;
+  // width: 100%;
+  // min-width: 300px;
   top: 0px;
   position: sticky;
   z-index: 10;
