--- a/src/styles/base.scss
+++ b/src/styles/base.scss
@@ -16,7 +16,8 @@ body {
 
 .container {
   margin: 0 auto;
-  height: 100px;
+  height: auto;
+  min-height: 300px;
   max-width: 968px;
   display: flex;
   flex-direction: column;
@@ -31,12 +32,16 @@ body {
 .section {
   min-height: 500px;
   height: auto;
+  margin: 0px 30px;
 }
 
 .section-container {
+  top: 0px;
   padding-left: env(safe-area-inset-left);
   padding-right: env(safe-area-inset-right);
-  margin: 30px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
   p {
     min-width: 250px;
   }
