--- a/src/styles/about.scss
+++ b/src/styles/about.scss
@@ -1,22 +1,19 @@
-
-
-.content-container {
+.section-content {
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
   flex-flow: row wrap;
-  justify-content: center;
-  align-items: center;
   .profile-image {
     flex: 0 0 auto;
     width: 250px;
     height: 250px;
-    margin: 25px;
+    margin: 30px;
   }
   .about-text {
+    
     flex: 1 1 100px;
     max-width: 570px;
     min-width: 250px;
-    margin: 25px;
+    margin: 25px 0px;
     p {
       width: 100%;
     }
