--- a/src/styles/base.scss
+++ b/src/styles/base.scss
@@ -4,6 +4,7 @@ html,
 body {
   height: 100%;
   margin: 0px;
+  -webkit-text-size-adjust: 100%;
 }
 
 body {
@@ -31,21 +32,26 @@ body {
 
 .section {
   min-height: 500px;
-  height: auto;
+  // max-height: 2000px;
+  // height: auto;
   margin: 0px 30px;
-}
-
-.section-container {
-  top: 0px;
   padding-left: env(safe-area-inset-left);
   padding-right: env(safe-area-inset-right);
-  display: flex;
-  flex-direction: column;
-  align-items: center;
   p {
-    min-width: 250px;
+    width: 100%;
   }
 }
+
+// .content-container {
+//   // top: 0px;
+//   display: flex;
+//   flex-direction: column;
+//   justify-content: center;
+//   align-items: center;
+//   p {
+//     width: 100%;
+//   }
+// }
 
 p {
   letter-spacing: 1px;
@@ -60,13 +66,27 @@ p {
 // }
 
 .section-title {
-  padding-top: 80px;
   @media (max-height: 414px), (max-width: 500px) {
     padding-top: 50px;
   }
   @media only screen and (max-height: 414px) and (max-width: 1024px) and (orientation: landscape) {
-    padding-top: 50px;
+    padding-top: 80px;
   }
+}
+
+.section-content {
+  padding: 0px 25px;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  flex-flow: column wrap;
+  .content-text-container {
+    // width: 20vw;
+    // max-width: 20vw;
+    display: flex;
+    flex-direction: column;
+  }
+  // align-items: center;
 }
 
 .button {
