Fix profile_image padding

--- a/src/styles/about.scss
+++ b/src/styles/about.scss
@@ -5,8 +5,11 @@
   .profile-image {
     flex: 0 0 auto;
     width: 250px;
-    height: 250px;
-    margin: 30px;
+    height: 250px;  
+    margin-right: 50px;
+    @media only screen and (max-width: 660px) {
+      margin-left: 50px;
+    }
   }
   .about-text {
     
