--- a/src/styles/about.scss
+++ b/src/styles/about.scss
@@ -1,24 +1,23 @@
-.section-content {
-  display: flex;
-  flex-direction: column;
-  flex-flow: row wrap;
-  .profile-image {
-    flex: 0 0 auto;
-    width: 250px;
-    height: 250px;  
-    margin-right: 50px;
-    @media only screen and (max-width: 660px) {
-      margin-left: 50px;
+#about-section {
+  .section-content {
+    padding: 0;
+    display: flex;
+    flex-direction: column;
+    flex-flow: row wrap;
+    .profile-image {
+      flex: 0 0 auto;
+      width: 250px;
+      height: 250px;
+      padding: 25px 25px 0px 25px;
     }
-  }
-  .about-text {
-    
-    flex: 1 1 100px;
-    max-width: 570px;
-    min-width: 250px;
-    margin: 25px 0px;
-    p {
-      width: 100%;
+    .about-text {
+      flex: 1 1 100px;
+      max-width: 570px;
+      min-width: 250px;
+      padding: 25px;
+      p {
+        width: 100%;
+      }
     }
   }
 }
