--- a/src/styles/contact.scss
+++ b/src/styles/contact.scss
@@ -8,8 +8,9 @@
       flex-direction: row;
       justify-content: space-between;
       align-items: center;
-      width: 300px;
-      height: 50px;
+      max-width: 300px;
+      min-width: 200px;
+      width: 100%;
     }
   }
 }
