Add pointer on hover for hamburger

--- a/src/styles/components/hamburgerMenu.scss
+++ b/src/styles/components/hamburgerMenu.scss
@@ -1,6 +1,10 @@
 .hamburger-menu {
   margin-right: 15px;
+  :hover{
+    cursor: pointer;
+  }
   .bar-container {
+    
     div {
       width: 35px;
       height: 2px;
