--- a/src/styles/base.scss
+++ b/src/styles/base.scss
@@ -48,24 +48,20 @@ p {
 }
 
 .un {
-  display: inline-block;
+  // display: inline-block;
   text-decoration: none;
   color: #3040ba;
+  background-image: linear-gradient(#3040ba, #3040ba);
+  background-position: 0% 100%;
+  background-repeat: no-repeat;
+  background-size: 0% 2px;
+  margin: -3px 0;
+  padding: 3px 0;
+  transition: background-size .3s;
 }
 
-.un:after {
-  content: '';
-  width: 0px;
-  height: 1px;
-  display: block;
-  background: #3040ba;
-  position: relative;
-  bottom: 3px;
-  transition: 400ms;
-}
-
-.un:hover:after {
-  width: 100%;
+.un:hover, .un:focus {
+  background-size: 100% 2px;
 }
 
 .section-title {
