--- a/src/styles/hero.scss
+++ b/src/styles/hero.scss
@@ -1,5 +1,6 @@
 .landing {
-  height: calc(100vh - 80px);
+  margin: 0px 30px;
+  height: calc(100% - 75px);
   min-height: 400px;
   display: flex;
   flex-direction: column;
