--- a/src/styles/about.scss
+++ b/src/styles/about.scss
@@ -13,15 +13,13 @@
         flex: 0 0 auto;
         width: 250px;
         height: 250px;
-        padding: 0 15px;
-        // padding: 25px 25px 0px 25px;
+        padding: 15px;
       }
       .about-text {
         flex: 1 1 100px;
         max-width: 570px;
         min-width: 250px;
-        padding: 0 15px;
-        // padding: 25px;
+        padding: 15px;
         p {
           width: 100%;
         }
