--- a/src/styles/base.scss
+++ b/src/styles/base.scss
@@ -27,7 +27,8 @@ body {
 
 .container-full {
   margin: 0;
-  padding: 0;
+  padding-left: env(safe-area-inset-left);
+  padding-right: env(safe-area-inset-right);
   height: 100vh;
   min-height: 400px;
 }
