--- a/src/styles/hero.scss
+++ b/src/styles/hero.scss
@@ -22,3 +22,13 @@
     }
   }
 }
+
+.bg-name {
+  z-index: -10;
+  position: absolute;
+  top: 15vh;
+  left: 40vw;
+  font-size: 35vh;
+  font-weight: 900;
+  color: rgb(240, 240, 240);
+}
