Fix background letters

--- a/src/styles/base.scss
+++ b/src/styles/base.scss
@@ -119,10 +119,29 @@ p {
   padding: 8px;
   border: 2px solid black;
   border-radius: 3px;
+  transition: all 0.2s;
   &:hover {
     color: #3040ba !important;
     border-color: #3040ba;
-    transition: all ease-in;
-    transition-duration: 0.2s;
+    transition: all 0.2s;
   }
 }
+
+//neuphormism button test
+// .button {
+//   // justify-content: center;
+//   padding: 9px;
+//   border: 1px solid rgb(236, 236, 236);
+//   border-radius: 10px;
+//   background-color: rgb(238, 238, 238);
+//   box-shadow: 3px 3px 4px #c8c8c8, -3px -3px 4px #ffffff;
+
+//   transition: all;
+//   transition-duration: 0.2s;
+//   &:hover {
+//     color: #3040ba !important;
+//     // border-color: #3040ba;
+//     transition: all;
+//     transition-duration: 0.2s;
+//   }
+// }
