--- a/src/styles/header.scss
+++ b/src/styles/header.scss
@@ -16,7 +16,7 @@ header {
   position: sticky;
   z-index: 10;
   box-shadow: 0px 0px 10px grey;
-  background-color: whitesmoke;
+  background-color: #f4f4f4;
   .inner-header {
     display: flex;
     align-items: center;
