--- a/src/styles/projects.scss
+++ b/src/styles/projects.scss
@@ -74,7 +74,7 @@
   border-radius: 2px;
   box-shadow: unset;
   transition: all 300ms;
-  background-color: #f6f6f6;
+  background-color: #fafafa;
   margin-bottom: 1em;
   &:hover {
     top: -5px;
