--- a/src/styles/projects.scss
+++ b/src/styles/projects.scss
@@ -71,10 +71,11 @@
 .project {
   position: relative;
   top: 0px;
-  border-radius: 2px;
+  border-radius: 3px;
+  border: 1px solid #eaeaea;
   box-shadow: unset;
   transition: all 300ms;
-  background-color: #fafafa;
+  background-color: #ffffff;
   margin-bottom: 1em;
   &:hover {
     top: -5px;
