--- a/src/styles/hero.scss
+++ b/src/styles/hero.scss
@@ -14,6 +14,7 @@
       font-size: 1.5em;
       font-weight: bold;
       margin: 0px;
+      color: #001d5a;
     }
     h1 {
       margin: 10px 0px;
@@ -74,7 +75,7 @@
     font-size: 20em;
   }
   font-weight: 900;
-  color: #efefef;
+  color: #f2f4f7;
   p {
     margin: 0;
     overflow-x: hidden;
