--- a/src/styles/base.scss
+++ b/src/styles/base.scss
@@ -145,7 +145,9 @@ p {
 
 .info-container {
   background-color: white;
-  padding: 30px 0;
+  padding: 60px 0;
+  margin-left: env(safe-area-inset-left);
+  margin-right: env(safe-area-inset-right);
   // margin: 0 10px;
   margin-bottom: 30px;
   border-radius: 20px;
