--- a/src/styles/header.scss
+++ b/src/styles/header.scss
@@ -15,7 +15,7 @@ header {
   top: 0px;
   position: sticky;
   z-index: 10;
-  box-shadow: 0px 0px 10px grey;
+  box-shadow: 0px 3px 5px rgb(189, 189, 189);
   background-color: #f4f4f4;
   .inner-header {
     display: flex;
