--- a/src/styles/header.scss
+++ b/src/styles/header.scss
@@ -16,7 +16,7 @@ header {
   position: sticky;
   z-index: 10;
   box-shadow: 0px 3px 5px rgb(189, 189, 189);
-  background-color: #f4f4f4;
+  background-color: #eeeeee;
   .inner-header {
     display: flex;
     align-items: center;
