Adjust bg-name colour

--- a/src/styles/hero.scss
+++ b/src/styles/hero.scss
@@ -75,7 +75,7 @@
     font-size: 20em;
   }
   font-weight: 900;
-  color: #f2f4f7;
+  color: #eaeef5;
   p {
     margin: 0;
     overflow-x: hidden;
