Fix bg-name width

--- a/src/styles/hero.scss
+++ b/src/styles/hero.scss
@@ -56,10 +56,10 @@
   z-index: -10;
   height: inherit;
   min-height: 400px;
-  width: 60vw;
+  width: 55%;
   position: absolute;
   top: 0;
-  left: 40%;
+  left: 45%;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -75,7 +75,7 @@
     font-size: 20em;
   }
   font-weight: 900;
-  color: #eaeef5;
+  color: #00000018;
   p {
     margin: 0;
     overflow-x: hidden;
