Update color scheme

--- a/src/styles/layout/footer.scss
+++ b/src/styles/layout/footer.scss
@@ -1,6 +1,6 @@
 .footer-container {
   min-height: 40px;
-  background-color: #eeeeee;
+  background-color: #ffffff;
   display: flex;
   align-items: center;
   justify-content: center;
