--- a/src/styles/header.scss
+++ b/src/styles/header.scss
@@ -16,7 +16,7 @@ header {
   position: sticky;
   z-index: 10;
   box-shadow: 0px 3px 5px rgba(0, 0, 0, 0.445);
-  background-color: #eeeeee;
+  background-color: #ffffff;
   .inner-header {
     display: flex;
     align-items: center;
