--- a/src/styles/base.scss
+++ b/src/styles/base.scss
@@ -13,7 +13,7 @@ body {
     Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   font-size: 16px;
   min-width: 300px;
-  background-color: #f2faff;
+  background-color: #eff4f8;
 }
 
 .container {
