--- a/src/styles/header.scss
+++ b/src/styles/header.scss
@@ -13,7 +13,8 @@ header {
   // width: 100%;
   // min-width: 300px;
   top: 0px;
-  position: sticky;
+  position: fixed;
+  width: 100%;
   z-index: 10;
   box-shadow: 0px 3px 5px rgba(0, 0, 0, 0.445);
   background-color: #ffffff;
