Fix hero height

--- a/src/styles/hero.scss
+++ b/src/styles/hero.scss
@@ -1,6 +1,6 @@
 .landing {
   margin: 0px 30px;
-  height: calc(100% - 75px);
+  height: 100%;
   min-height: 400px;
   display: flex;
   flex-direction: column;
