Update project bg-color

--- a/src/styles/projects.scss
+++ b/src/styles/projects.scss
@@ -72,10 +72,10 @@
   position: relative;
   top: 0px;
   border-radius: 3px;
-  border: 1px solid #eaeaea;
+  // border: 1px solid #eaeaea;
   box-shadow: unset;
   transition: all 300ms;
-  background-color: #fafafa;
+  background-color: #f9fafc;
   margin-bottom: 1em;
   &:hover {
     top: -3px;
