--- a/src/styles/base.scss
+++ b/src/styles/base.scss
@@ -20,22 +20,21 @@ body {
   margin: 0 auto;
   height: auto;
   min-height: 300px;
-  max-width: 968px;
+  max-width: 1020px;
   display: flex;
   flex-direction: column;
-  // align-items: center;
 }
 
 .container-full {
   margin: 0;
   padding-left: env(safe-area-inset-left);
   padding-right: env(safe-area-inset-right);
-  height: 100vh;
-  // min-height: 400px;
+  height: 95vh;
+  min-height: 375px;
 }
 
 .section {
-  margin: 0px 30px 70px 30px;
+  margin: 20px 80px 60px 80px;
   padding-left: env(safe-area-inset-left);
   padding-right: env(safe-area-inset-right);
   p {
