--- a/src/styles/header.scss
+++ b/src/styles/header.scss
@@ -1,8 +1,9 @@
 //Header
-
-header {
+.header-container {
   padding-left: env(safe-area-inset-left);
   padding-right: env(safe-area-inset-right);
+}
+header {
   height: 80px;
   @media (max-height: 415px), (max-width: 515px) {
     height: 50px;
