--- a/src/styles/header.scss
+++ b/src/styles/header.scss
@@ -16,6 +16,7 @@ header {
   top: 0px;
   position: fixed;
   width: 100%;
+  min-width: 300px;
   z-index: 10;
   box-shadow: 0px 3px 5px rgba(0, 0, 0, 0.445);
   background-color: #ffffff;
