--- a/src/styles/hero.scss
+++ b/src/styles/hero.scss
@@ -54,10 +54,12 @@
 }
 
 .bg-name {
-  z-index: -10;
-  height: inherit;
+  // cursor: default;
+  // user-select: none;
+  z-index: -1;
+  height: 100%;
   min-height: 375px;
-  width: 55%;
+  width: 52.8vw;
   position: absolute;
   // top: 5vh;
   top: 0;
@@ -77,7 +79,7 @@
     font-size: 20em;
   }
   font-weight: 900;
-  color: #00000010;
+  color: #00000008;
   p {
     margin: 0;
     overflow-x: hidden;
@@ -125,9 +127,20 @@
 
 .landing-container {
   position: relative;
-  // margin: 0;
-  // padding-left: env(safe-area-inset-left);
-  // padding-right: env(safe-area-inset-right);
+  padding-left: env(safe-area-inset-left);
+  padding-right: env(safe-area-inset-right);
   height: 91vh;
   min-height: 375px;
+  margin: 0 auto;
+  min-height: 300px;
+  max-width: 1020px;
+}
+
+
+.landing-outer-container {
+  margin: 0;
+  background-image: linear-gradient(to right, #eaeef3, #b0c6d6);
+  width: 100%;
+  clip-path: polygon(0 0, 100% 0, 100% 90%, 50% 100%, 0 90%);
+  z-index: 10;
 }
