--- a/src/styles/header.scss
+++ b/src/styles/header.scss
@@ -2,6 +2,10 @@
 .header-container {
   padding-left: env(safe-area-inset-left);
   padding-right: env(safe-area-inset-right);
+  ul {
+    list-style-type: none;
+    padding-left: 0;
+  }
 }
 header {
   height: 80px;
@@ -41,12 +45,12 @@ header {
         padding-left: 15px;
       }
     }
-    .menu-container {
+    .menu-container, ul {
       display: flex;
       justify-content: center;
       align-items: center;
       a {
-        margin: 0 15px;
+        margin: 2px;
         text-decoration: none;
         letter-spacing: 1.7px;
         color: black;
